--- a/js06.html
+++ b/js06.html
@@ -2,10 +2,10 @@
     <head><title>Check Brow</title>
     </head>
     <body>
-        <script language="JavaScrip">
-        document.write("<BR> This browser is" + navigator.addName);
-        document.write("<BR> Version" + navigator.addVersion);
-        if(parseFloat(navigator.addVersion)>=4) {
+        <script language=JavaScript>
+        document.write("<BR> This browser is" + navigator.appName);
+        document.write("<BR> Version" + navigator.appVersion);
+        if (parseFloat(navigator.appVersion) >=4) {
             document.write("<BR> You have an up-to-date browser");
 
         }
